<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.editors/tools"
    android:id="@+id/emotions_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        android:background="@drawable/rectangle_container"
        android:contentDescription="@string/btn_desc_back"
        android:fillColor="@color/dark_grey"
        android:src="@drawable/arrow_back"
        android:tint="@color/ash_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/centerContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_container"
            android:orientation="vertical"
            android:paddingTop="15dp"   android:paddingBottom="15dp" android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="10dp"> <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/loved"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/loved"
                    android:clickable="true"
                    android:contentDescription="@string/loved_desc"
                    android:scaleType="fitCenter" />

                <TextView
                    android:id="@+id/loved_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loved_name"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:layout_marginTop="2dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/gamja_flower" />
            </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/annoyed"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/annoyed"
                        android:clickable="true"
                        android:contentDescription="@string/annoyed_desc"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:id="@+id/annoyed_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/annoyed_name"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:layout_marginTop="2dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/gamja_flower" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/angry"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/angry"
                        android:clickable="true"
                        android:contentDescription="@string/angry_desc"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:id="@+id/angry_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/angry_name"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:layout_marginTop="2dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/gamja_flower" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/stressed"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/stressed"
                        android:clickable="true"
                        android:contentDescription="@string/stressed_desc"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:id="@+id/stressed_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stressed_name"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:layout_marginTop="2dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/gamja_flower" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/happy"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/happy"
                        android:clickable="true"
                        android:contentDescription="@string/happy_desc"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:id="@+id/happy_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/happy_name"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:layout_marginTop="2dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/gamja_flower" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/confused"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/confused"
                        android:clickable="true"
                        android:contentDescription="@string/confused_desc"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:id="@+id/confused_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confused_name"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:layout_marginTop="2dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/gamja_flower" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/excited"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/excited"
                        android:clickable="true"
                        android:contentDescription="@string/excited_desc"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:id="@+id/excited_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/excited_name"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:layout_marginTop="2dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/gamja_flower" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/bored"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/bored"
                        android:clickable="true"
                        android:contentDescription="@string/bored_desc"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:id="@+id/bored_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bored_name"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:layout_marginTop="2dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/gamja_flower" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/calm"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/calm"
                        android:clickable="true"
                        android:contentDescription="@string/calm_desc"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:id="@+id/calm_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calm_name"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:layout_marginTop="2dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/gamja_flower" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/sad"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/sad"
                        android:clickable="true"
                        android:contentDescription="@string/sad_desc"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:id="@+id/sad_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sad_name"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:layout_marginTop="2dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/gamja_flower" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/shocked"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/shocked"
                        android:clickable="true"
                        android:contentDescription="@string/shocked_desc"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:id="@+id/shocked_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shocked_name"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:layout_marginTop="2dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/gamja_flower" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/tired"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/tired"
                        android:clickable="true"
                        android:contentDescription="@string/tired_desc"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:id="@+id/tired_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tired_name"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:layout_marginTop="2dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/gamja_flower" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="10dp"
            android:background="@drawable/rectangle_container"
            android:contentDescription="@string/btn_mix_emotions"

            android:src="@drawable/flower_vase"
            android:tint="@color/ash_grey"

            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" /> </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>