<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <!-- Back Button -->
    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/rectangle_container"
        android:src="@drawable/arrow_back"
        android:tint="@color/ash_grey"
        android:contentDescription="@string/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Title -->
    <TextView
        android:id="@+id/tvJournalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_journal"
        android:textSize="40sp"
        android:textColor="@color/dark_grey"
        android:fontFamily="@font/gamja_flower"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Journal Input -->
    <EditText
        android:id="@+id/etJournal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/placeholder_entry"
        android:background="@drawable/journal_box"
        android:textSize="25sp"
        android:textColor="@color/dark_grey"
        android:fontFamily="@font/gamja_flower"
        android:padding="16dp"
        android:layout_marginTop="15dp"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:overScrollMode="always"
        android:scrollbars="vertical"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvJournalTitle"
        app:layout_constraintBottom_toTopOf="@id/btnBloomOpen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Floating Bloom Button -->
    <ImageView
        android:id="@+id/btnBloomOpen"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/fab_bg"
        android:src="@drawable/flower_solid"
        android:tint="@color/ash_grey"
        android:padding="10dp"
        android:contentDescription="Open Bloom Popup"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>



